syntax = "proto3";
package protowire;

import "rpc.proto";

message KaspadRequest {
  oneof payload {
    GetCurrentNetworkRequestMessage getCurrentNetworkRequest = 1001;
    SubmitBlockRequestMessage submitBlockRequest = 1003;
    GetBlockTemplateRequestMessage getBlockTemplateRequest = 1005;
    NotifyBlockAddedRequestMessage notifyBlockAddedRequest = 1007;
    GetBlockRequestMessage getBlockRequest = 1025;
    GetInfoRequestMessage getInfoRequest = 1063;
    NotifyNewBlockTemplateRequestMessage notifyNewBlockTemplateRequest = 1081;
}
}

message KaspadResponse {
  oneof payload {
    GetCurrentNetworkResponseMessage getCurrentNetworkResponse = 1002;
    SubmitBlockResponseMessage submitBlockResponse = 1004;
    GetBlockTemplateResponseMessage getBlockTemplateResponse = 1006;
    NotifyBlockAddedResponseMessage notifyBlockAddedResponse = 1008;
    BlockAddedNotificationMessage blockAddedNotification = 1009;
    GetBlockResponseMessage getBlockResponse = 1026;
    GetInfoResponseMessage getInfoResponse = 1064;
    NotifyNewBlockTemplateResponseMessage notifyNewBlockTemplateResponse = 1082;
    NewBlockTemplateNotificationMessage newBlockTemplateNotification = 1083;
  }
}

service RPC {
  rpc MessageStream (stream KaspadRequest) returns (stream KaspadResponse) {}
}
